examples/todomvc/web/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todomvc-web
  labels:
    istio-injection: enabled
