examples/todomvc/web/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todomvc-web
  labels:
    app: todomvc-web
spec:
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app: todomvc-web
