examples/todomvc/web/manifests/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: todomvc-web
spec:
  hosts:
    - web.todomvc.localhost
  gateways:
    - istio-system/ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: todomvc-web
